fix: all notes